--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,21 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 apply from: "../android.gradle"
 
 dependencies {
-    
+
+    implementation project(":baseUI")
+
+    def activity_version = "1.3.0"
+    implementation "androidx.activity:activity-ktx:$activity_version"
+
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    androidTestImplementation "androidx.room:room-testing:$room_version"
+
 }
