--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,9 @@ dependencies {
     def activity_version = "1.3.0"
     implementation "androidx.activity:activity-ktx:$activity_version"
 
+    def fragment_version = "1.3.6"
+    implementation("androidx.fragment:fragment-ktx:$fragment_version")
+
     def room_version = "2.3.0"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
