--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,9 @@ apply from: "../android.gradle"
 dependencies {
 
     implementation project(":baseUI")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
 
     def activity_version = "1.3.0"
     implementation "androidx.activity:activity-ktx:$activity_version"
