--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
 
-    def activity_version = "1.3.0"
+    def activity_version = "1.3.1"
     implementation "androidx.activity:activity-ktx:$activity_version"
 
     def fragment_version = "1.3.6"
@@ -29,5 +29,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    def gson_version = "2.8.7"
+    implementation "com.google.code.gson:gson:$gson_version"
 
 }
