--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ apply from: "../android.gradle"
 dependencies {
 
     implementation project(":baseUI")
+    implementation project(":tedPermission")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
