--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,12 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     androidTestImplementation "androidx.room:room-testing:$room_version"
 
-    def lifecycle_version = "2.3.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    def lifecycle_version = "2.4.0-alpha03"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
 
     def gson_version = "2.8.7"
     implementation "com.google.code.gson:gson:$gson_version"
