--- a/refc/build.gradle
+++ b/refc/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     ext.coroutines_version = '1.5.1'
     ext.gilde_version = '4.12.0'
     ext.window_manager_version = '1.0.0-beta02'
+    ext.room_version = '2.3.0'
 
     repositories {
         google()
