--- a/refc/app/build.gradle
+++ b/refc/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     kapt("androidx.room:room-compiler:$room_version")
 
     implementation("androidx.room:room-ktx:$room_version")
+
+    implementation "com.google.code.gson:gson:$gson_version"
 }
