--- a/refc/build.gradle
+++ b/refc/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     ext.gilde_version = '4.12.0'
     ext.window_manager_version = '1.0.0-beta02'
     ext.room_version = '2.3.0'
+    ext.gson_version = '2.8.7'
 
     repositories {
         google()
