--- a/refc/app/build.gradle
+++ b/refc/app/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation project(":BaseUi")
 
     implementation("androidx.activity:activity-ktx:$activity_version")
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
