--- a/refc/build.gradle
+++ b/refc/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     ext.okhttp_version = '4.9.1'
     ext.timber_version = '5.0.1'
     ext.viewmodel_hilt_version = '1.0.0-alpha03'
-    ext.activity_version = '1.3.1'
+    ext.activity_version = '1.4.0'
+    ext.fragment_version = '1.4.0'
     ext.lifecycle_version = '2.4.0-rc01'
     ext.coroutines_version = '1.5.1'
     ext.gilde_version = '4.12.0'
