--- a/refc/build.gradle
+++ b/refc/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 
+    ext.gradle_version = '7.0.4'
+    ext.kotlin_plugin_version = '1.6.0'
     ext.hilt_version = '2.38.1'
     ext.retrofit_version = '2.9.0'
     ext.okhttp_version = '4.9.1'
@@ -9,9 +11,9 @@ buildscript {
     ext.activity_version = '1.4.0'
     ext.fragment_version = '1.4.0'
     ext.lifecycle_version = '2.4.0-rc01'
-    ext.coroutines_version = '1.5.1'
+    ext.coroutines_version = '1.5.2'
     ext.gilde_version = '4.12.0'
-    ext.window_manager_version = '1.0.0-beta02'
+    ext.window_manager_version = '1.0.0-beta04'
     ext.room_version = '2.3.0'
     ext.gson_version = '2.8.7'
 
@@ -20,8 +22,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
+        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_plugin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
