--- a/refc/app/build.gradle
+++ b/refc/app/build.gradle
@@ -12,7 +12,7 @@ dependencies {
 
     implementation project(":BaseUi")
 
-    implementation("androidx.activity:activity-ktx:$activity_version")
+    implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
