--- a/refc/build.gradle
+++ b/refc/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
 
     ext.gradle_version = '7.0.4'
-    ext.kotlin_plugin_version = '1.6.0'
+    ext.kotlin_plugin_version = '1.6.10'
     ext.hilt_version = '2.38.1'
     ext.retrofit_version = '2.9.0'
     ext.okhttp_version = '4.9.1'
@@ -13,7 +13,7 @@ buildscript {
     ext.lifecycle_version = '2.4.0-rc01'
     ext.coroutines_version = '1.5.2'
     ext.gilde_version = '4.12.0'
-    ext.window_manager_version = '1.0.0-beta04'
+    ext.window_manager_version = '1.0.0-rc01'
     ext.room_version = '2.3.0'
     ext.gson_version = '2.8.7'
 
