--- a/refc/app/src/main/AndroidManifest.xml
+++ b/refc/app/src/main/AndroidManifest.xml
@@ -3,21 +3,25 @@
     package="kr.ryan.weatheralarm">
 
     <application
-        android:allowBackup="false"
         android:name=".di.AlarmApplication"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherAlarm">
         <activity
-            android:name=".future.activity.MainActivity"
+            android:name=".future.activity.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".future.activity.MainActivity"
+            android:exported="true">
         </activity>
     </application>
 
