--- a/refc/build.gradle
+++ b/refc/build.gradle
@@ -14,8 +14,9 @@ buildscript {
     ext.coroutines_version = '1.5.2'
     ext.gilde_version = '4.12.0'
     ext.window_manager_version = '1.0.0-rc01'
-    ext.room_version = '2.3.0'
+    ext.room_version = '2.4.1'
     ext.gson_version = '2.8.7'
+    ext.splash_version = '1.0.0-beta01'
 
     repositories {
         google()
