--- a/refc/app/src/main/AndroidManifest.xml
+++ b/refc/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:theme="@style/Theme.WeatherAlarm">
         <activity
             android:name=".future.activity.SplashActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,8 +22,7 @@
         </activity>
         <activity
             android:name=".future.activity.MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"/>
     </application>
 
 </manifest>
