--- a/refc/app/src/main/AndroidManifest.xml
+++ b/refc/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kr.ryan.weatheralarm">
 
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <application
         android:name=".di.AlarmApplication"
         android:allowBackup="false"
