--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,11 @@ buildscript {
     ext.timber_version = '5.0.1'
     ext.viewmodel_hilt_version = '1.0.0-alpha03'
     ext.activity_version = '1.4.0'
-    ext.fragment_version = '1.4.0'
-    ext.lifecycle_version = '2.4.0-rc01'
+    ext.fragment_version = '1.4.1'
+    ext.lifecycle_version = '2.5.0-alpha01'
     ext.coroutines_version = '1.5.2'
     ext.gilde_version = '4.12.0'
-    ext.window_manager_version = '1.0.0-rc01'
+    ext.window_manager_version = '1.0.0'
     ext.room_version = '2.4.1'
     ext.gson_version = '2.8.7'
     ext.splash_version = '1.0.0-beta01'
