--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,5 @@ dependencyResolutionManagement {
 rootProject.name = "WeatherAlarm"
 include ':app'
 include ':BaseUi'
+include ':permissionModule'
+include ':RetrofitModule'
