--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,8 @@ apply from: "../android.gradle"
 dependencies {
 
     implementation project(":BaseUi")
+    implementation project(":permissionModule")
+    implementation project(":RetrofitModule")
 
     implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
