--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,10 @@ buildscript {
     ext.okhttp_version = '4.9.1'
     ext.timber_version = '5.0.1'
     ext.viewmodel_hilt_version = '1.0.0-alpha03'
+    ext.worker_hilt_version = '1.0.0'
     ext.activity_version = '1.4.0'
     ext.fragment_version = '1.4.1'
-    ext.lifecycle_version = '2.5.0-alpha01'
+    ext.lifecycle_version = '2.5.0-alpha02'
     ext.coroutines_version = '1.5.2'
     ext.gilde_version = '4.12.0'
     ext.window_manager_version = '1.0.0'
@@ -18,6 +19,8 @@ buildscript {
     ext.gson_version = '2.9.0'
     ext.tedpermission_version = '3.3.0'
     ext.splash_version = '1.0.0-beta01'
+    ext.work_version = '2.7.1'
+
 
     repositories {
         google()
