[add] locationManager 를 이용한 위치 정보는 건물내에서는 작동하지 않는 현상이있어 구글플레이를 이용하는 fusedLocationProviderClient 을 이용하는 걸로 변경.

--- a/android.gradle
+++ b/android.gradle
@@ -61,4 +61,6 @@ dependencies {
 
     implementation "io.github.ParkSangGwon:tedpermission-coroutine:$tedpermission_version"
 
+    implementation "com.google.android.gms:play-services-location:$google_location_version"
+
 }
